# pension-efficiency-toolkit

./: .gitignore  CLAUDE.md  Chapter3_Research_Methodology.tex  DATASET.md  Dragged Text-WedFeb25202603-46-21GMT+0200(CentralAfricaTime)  Model_Implementation.md  PROJECT.docx  PROMPT.md  additions.txt  dataset.csv  extract_docx.py  lorraine_document.aux  lorraine_document.fdb_latexmk  lorraine_document.fls  lorraine_document.out  lorraine_document.tex  lorraine_document.toc  new_dataset.csv  new_dataset.csv.bak  temp_file.tex
prototype/pension_efficiency_toolkit/: .env  Dockerfile  PR_DESCRIPTION.md  README.md  dataset_prompt.md  pension_data.db  pyproject.toml
prototype/pension_efficiency_toolkit/.streamlit/: config.toml
prototype/pension_efficiency_toolkit/explanation/: explanation.aux  explanation.fdb_latexmk  explanation.fls  explanation.out  explanation.tex  explanation.toc  test_process.py
prototype/pension_efficiency_toolkit/pension_toolkit/: __init__.py  auth.py  bootstrap.py  cli.py  data_io.py  db.py  dea_core.py  ml_stage.py  pca_utils.py  reporting.py  scale.py  ui_streamlit.py  utils.py
prototype/pension_efficiency_toolkit/prototype_documemt/: prototype_document.aux  prototype_document.fdb_latexmk  prototype_document.fls  prototype_document.lof  prototype_document.lot  prototype_document.out  prototype_document.tex  prototype_document.toc
prototype/pension_efficiency_toolkit/scripts/: run_local.sh
prototype/pension_efficiency_toolkit/tests/: sample_data.csv  test_bootstrap.py  test_data_io.py  test_dea_core.py  test_ml_stage.py  test_pca.py
(+25 files in other folders)
