[project]
name = "pension-efficiency-toolkit"
version = "0.1.0"
description = "DEA + ML pipeline for pension fund efficiency analysis in Zimbabwe"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pulp>=2.7",
    "joblib>=1.3",
    "streamlit>=1.28",
    "plotly>=5.0",
    "matplotlib>=3.7",
    "reportlab>=4.0",
    "pytest>=7.4",
]

[project.scripts]
pension-toolkit = "pension_toolkit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pension_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "black>=23.0",
    "ruff>=0.1",
]
